tests/ui/transmutability/alignment/align-fail.stderr
error[E0277]: `&[u8; 0]` cannot be safely transmuted into `&[u16; 0]`
  --> $DIR/align-fail.rs:21:55
   |
LL | ...ic [u8; 0], &'static [u16; 0]>();
   |                ^^^^^^^^^^^^^^^^^ the minimum alignment of `&[u8; 0]` (1) should be greater than that of `&[u16; 0]` (2)
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/align-fail.rs:9:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: false,
LL | |                 lifetimes: true,
...  |
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`
help: consider removing the leading `&`-reference
   |
LL -     assert::is_maybe_transmutable::<&'static [u8; 0], &'static [u16; 0]>();
LL +     assert::is_maybe_transmutable::<&'static [u8; 0], [u16; 0]>();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
